kubernetes/apps/monitoring/test-reports/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-reports
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
    gateway.supermorphic.com/access: internal
